# pycon-africa

./: .gitignore  CONTRIBUTING.md  README.md  d  db (2).sqlite3  manage.py  pyproject.toml  req.txt  requirement.txt  requirements.txt
about/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
cms/: admin.py  models.py  urls.py  views.py
coc/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
conference_schedule/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
event/: admin.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
faq/: admin.py  models.py  urls.py  views.py
fin_aid/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
health_safety_guideline/: admin.py  apps.py  forms.py  mixins.py  models.py  urls.py  views.py
home/: admin.py  forms.py  models.py  urls.py  views.py
our_sponsors/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
privacypolicy/: admin.py  models.py  views.py
pycon2020/: urls.py  views.py
pyconafrica/: asgi.py  settings.py  urls.py  wsgi.py
pyconafrica2019/: apps.py  urls.py  views.py
registration/: admin.py  apps.py  auth_urls.py  forms.py  models.py  urls.py  utils.py  views.py
schedule/: admin.py  api.py  forms.py  models.py  serializers.py  urls.py  views.py
speakers/: admin.py  forms.py  models.py  urls.py  views.py
sponsor_us/: admin.py  apps.py  models.py  urls.py  views.py
sponsors/: admin.py  forms.py  models.py  urls.py  views.py
talks/: __init__.py  admin.py  apps.py  forms.py  models.py  resources.py  serializers.py  signals.py  (+2 more)
(+346 files in other folders)
