[tool.poetry]
name = "pycon-africa"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.*"
django = "^5.0.3"
cloudinary = "^1.39.1"
django-grappelli = "^3.0.8"
django-cloudinary-storage = "^0.3.0"
django-gamma-cloudinary = "^0.2.3"
django-avatar = "^8.0.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2024.2"
django-recaptcha = "^4.0.0"
django-slugify-processor = "^1.6.0"
django-countries = "^7.6"
django-summernote = "^0.8.20.0"
django-extensions = "^3.2.3"
django-robohash-svg = "^0.9.5"
django-embed-video = "^1.4.9"
django-imagekit = "^5.0.0"
django-import-export = "^3.3.7"
djangorestframework = "^3.15.1"
django-tinymce = "^4.0.0"
sorl-thumbnail = "^12.10.0"
django-markdownx = "^4.0.7"
django-hitcount = "^1.3.5"
django-taggit = "^5.0.1"
django-thumbs-v2 = "^0.4.1"
django-simple-history = "^3.5.0"
hashids = "^1.3.1"
django-hashid-field = "^3.4.0"
django-next-prev = "^1.1.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
